--- a/MidpointSonar/src/main/resources/templates/login.html
+++ b/MidpointSonar/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container">
-    <form class="form-signin" method="post" th:action="@{/login}">
+    <form class="form-signin" th:action="@{/login}" method="post">
         <h2 class="form-signin-heading">Please sign in to MidPoint Sonar!</h2>
         <p th:if="${param.error}" class="error">Invalid user, password, or MidPoint URI</p>
         <p>
