run history and rules and qp manager small fixes

--- a/MidpointSonar/src/main/resources/templates/login.html
+++ b/MidpointSonar/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
         <p th:if="${param.error}" class="error">Invalid user, password, or MidPoint URI</p>
         <p>
             <label for="uri" class="sr-only">URI</label>
-            <input type="text" id="uri" name="uri" value="http://localhost:8080/midpoint/ws/rest/tasks"
+            <input type="text" id="uri" name="uri" value="http://midpoint:8080/midpoint/ws/rest/tasks/"
                    class="form-control" placeholder="MidPoint URI" required>
         </p>
         <p>
